--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [egg_info]
-tag_build = dev
+tag_build =
 
 [extract_messages]
 add_comments = TRANSLATOR:
@@ -26,4 +26,3 @@ domain = tractags
 [check_catalog]
 input_dir = tractags/locale
 domain = tractags
-
