--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ output_file = tractags/locale/messages.pot
 #keywords = _ ngettext:1,2 N_ tag_
 keywords = N_ _ tag_ tagn_:1,2  # nothing else used by now
 width = 72
+mapping_file = messages.cfg
 
 [init_catalog]
 input_file = tractags/locale/messages.pot
