TracTags: Fix incorrect metadatga in tag
git-svn-id: https://trac-hacks.org/svn/tagsplugin/tags/0.12@18213 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
-[egg_info]
-tag_build = dev
+#[egg_info]
+#tag_build = dev
 
 [extract_messages]
 add_comments = TRANSLATOR:
@@ -27,3 +27,5 @@ domain = tractags
 input_dir = tractags/locale
 domain = tractags
 
+[aliases]
+release = sdist bdist_wheel bdist_egg
