TracTags: install xmlrpcplugin when running tests
git-svn-id: https://trac-hacks.org/svn/tagsplugin/trunk@18664 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     babel
     trac14: Trac~=1.4.0
     trac16: Trac~=1.6.0
+    svn+https://trac-hacks.org/svn/xmlrpcplugin/trunk/
 setenv =
     TMP = {envtmpdir}
     PYTHON_COLORS = 0
